# database-support-ai

./: .dockerignore  .env.evaluation.example  .env.example  .gitignore  ASSETS.md  Dockerfile  README.md  REGRESSION_SCENARIO_001_RESULT.txt  alembic.ini  app.html  banking-005-evidence-trace.json  evaluation-125.db-shm  evaluation-125.db-wal  evaluation-app-125.db-shm  evaluation-app-125.db-wal  fix-ep-01-targeted-results.csv  fix-ep-01-verification-report.md  index.html  powershell5-orchestrator-report.md  preflight-output.txt  provider-timeout-investigation.md  pyproject.toml  unsafe-remediation-repeated-results.csv  unsafe-remediation-variability-report.md  validation25-residual-investigation.md  validation25-residual-results.csv
alembic/: env.py
benchmarks/: README.md
docs/: azure-persistent-platform-layer.md  azure-postgres-internal-db.md  azure-smoke-test-checklist.md  developer_flow.md  evaluation-foundation-baseline.md
evaluation/: BENCHMARK.md  Create-CombinedBenchmarkDashboard-V2.ps1  Create-CombinedBenchmarkDashboard-V3.ps1  Create-CombinedBenchmarkDashboard.ps1  Get-FiveDomainPilotResults.ps1  README.md  Resolve-ScenarioInventory.ps1  Run-125ScenarioBenchmark.ps1  __init__.py  generate_combined_dashboard.py  generate_combined_dashboard_v3.py  job_executor.py  local_environment.py  preflight.py  worker.py
evaluation_databases/: README.md  deploy-azure.ps1  deploy-local.ps1  provision_readonly_user.py
frontend-react/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  (+1 more)
(+1304 files in other folders)
