[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legacydb-support-copilot"
version = "0.1.0"
description = "Enterprise SaaS backend modules for LegacyDB Support Copilot."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pymysql>=1.1",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "reportlab>=4.2",
  "azure-storage-blob>=12.22",
  "azure-core>=1.30",
  "azure-identity>=1.17",
  "azure-keyvault-secrets>=4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legacydb_copilot = ["reports/templates/*.html"]
